Added crawler to FoundInfoCollector. Implementing unicode converter.

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -32,6 +32,15 @@
                         android:text="This is Appbar"
                         android:textColor="#ffffff"
                         android:textSize="20dp"/>
+
+                    <RelativeLayout
+                        android:id="@+id/requestButton"
+                        android:background="#FFFFFF"
+                        android:layout_width="100dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:text="Button" />
                 </RelativeLayout>
 
             </android.support.v7.widget.Toolbar>
