--- a/app/src/main/res/layout/main_window_info.xml
+++ b/app/src/main/res/layout/main_window_info.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="180dp"
+              android:layout_height="200dp"
     android:background="#ffffff">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="200dp"
         android:background="#ffffff">
         <LinearLayout
             android:id="@+id/window_info_window"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ffffff"
+            android:background="@drawable/window_board"
             android:elevation="5dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
@@ -24,7 +24,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:background="#33aaff">
+                android:background="@drawable/window_board_title">
                 <Button
                     android:id="@+id/window_info_menu"
                     android:layout_width="30dp"
@@ -66,12 +66,62 @@
             <TextView
                 android:id="@+id/window_info_content"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
+                android:layout_height="95dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:lines="5"
-                android:text="fdsa"
+                android:text="empty content"
                 android:textSize="16dp"
                 android:textColor="#115588"/>
+
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <View
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/clock"/>
+
+                <TextView
+                    android:id="@+id/window_info_date"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="27dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="4dp"
+                    android:lines="1"
+                    android:text="YYYY-MM-dd-hh-mm"
+                    android:textSize="11dp"
+                    android:textColor="#115588"/>
+
+
+                <View
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginLeft="150dp"
+                    android:layout_marginTop="3dp"
+                    android:background="@drawable/writer"/>
+
+                <TextView
+                    android:id="@+id/window_info_writer"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="170dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="2dp"
+                    android:lines="1"
+                    android:text="writer"
+                    android:textSize="13dp"
+                    android:textColor="#115588"/>
+
+            </RelativeLayout>
 
         </LinearLayout>
 
