각 사이트별로 로고 이미지 및 타이틀바 디자인 적용

--- a/app/src/main/res/drawable/ham.xml
+++ b/app/src/main/res/drawable/ham.xml
@@ -1,16 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item android:width="150dp">
+    <item android:width="1dp"
+        android:height="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="#33aaff"/>
-            <corners android:radius="5dp"/>
+            <corners android:radius="10dp"/>
+            <solid android:color="#ffffff"/>
         </shape>
     </item>
 
-    <item android:top="10dp">
+    <item android:top="5dp"
+          android:bottom="21dp"
+        android:left="3dp"
+        android:right="3dp">
         <shape android:shape="rectangle">
-            <solid android:color="#33aaff"/>
+            <corners android:radius="10dp"/>
+            <solid android:color="#ffffff"/>
+        </shape>
+    </item>
+
+    <item android:top="13dp"
+          android:bottom="13dp"
+          android:left="3dp"
+          android:right="3dp">
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp"/>
+            <solid android:color="#ffffff"/>
+        </shape>
+    </item>
+
+    <item android:top="21dp"
+          android:bottom="5dp"
+          android:left="3dp"
+          android:right="3dp">
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp"/>
+            <solid android:color="#ffffff"/>
         </shape>
     </item>
 
