--- a/app/src/main/res/drawable/window_board_title_cauie.xml
+++ b/app/src/main/res/drawable/window_board_title_cauie.xml
@@ -3,14 +3,14 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#33aaff"/>
+            <solid android:color="#3ebb5c"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
 
     <item android:top="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="#33aaff"/>
+            <solid android:color="#3ebb5c"/>
         </shape>
     </item>
 
