--- a/app/src/main/res/layout/main_window_info.xml
+++ b/app/src/main/res/layout/main_window_info.xml
@@ -2,29 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="200dp"
-    android:background="#ffffff">
+              android:layout_height="195dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="#ffffff">
+        android:layout_height="195dp">
         <LinearLayout
             android:id="@+id/window_info_window"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/window_board"
-            android:elevation="5dp"
+            android:elevation="8dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:orientation="vertical">
 
             <RelativeLayout
+                android:id="@+id/window_info_title_board"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:background="@drawable/window_board_title">
+                android:background="@drawable/window_board_title_unknown">
+
                 <Button
                     android:id="@+id/window_info_menu"
                     android:layout_width="30dp"
@@ -41,7 +41,7 @@
                     android:id="@+id/window_info_logo"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="@drawable/cau"
+                    android:background="@drawable/logo_cau"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="5dp">
 
@@ -96,9 +96,9 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="4dp"
                     android:lines="1"
-                    android:text="YYYY-MM-dd-hh-mm"
+                    android:text="yyyy-MM-dd-hh-mm"
                     android:textSize="11dp"
-                    android:textColor="#115588"/>
+                    android:textColor="#777777"/>
 
 
                 <View
@@ -119,7 +119,7 @@
                     android:lines="1"
                     android:text="writer"
                     android:textSize="13dp"
-                    android:textColor="#115588"/>
+                    android:textColor="#777777"/>
 
             </RelativeLayout>
 
