--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tong.cau.com.cautong.MainActivity">
+    tools:context="tong.cau.com.cautong.main.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
