--- a/app/src/main/res/layout/main_activity_star_list.xml
+++ b/app/src/main/res/layout/main_activity_star_list.xml
@@ -29,9 +29,10 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="검색"
+                        android:text="즐겨찾기"
                         android:textColor="#ffffff"
                         android:textSize="20dp"/>
+
                 </RelativeLayout>
 
             </android.support.v7.widget.Toolbar>
@@ -47,7 +48,7 @@
         tools:context="jni.ndk.com.myapplication.ScrollingActivity">
 
         <LinearLayout
-            android:id="@+id/view_pager_main"
+            android:id="@+id/view_pager_star"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
