--- a/app/src/main/res/drawable/window_board_title_social.xml
+++ b/app/src/main/res/drawable/window_board_title_social.xml
@@ -8,9 +8,12 @@
         </shape>
     </item>
 
-    <item android:top="10dp">
+    <item>
         <shape android:shape="rectangle">
-            <solid android:color="#ff6666"/>
+            <gradient android:angle="315"
+                      android:startColor="#aaffffff"
+                      android:centerColor="#00ffffff"/>
+            <corners android:radius="5dp"/>
         </shape>
     </item>
 
