--- a/app/src/main/res/layout/main_window_info.xml
+++ b/app/src/main/res/layout/main_window_info.xml
@@ -69,10 +69,10 @@
                     android:id="@+id/window_info_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_marginRight="50dp"
-                    android:layout_marginLeft="50dp"
-                    android:lines="1"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:lines="2"
                     android:text="empty title"
                     android:textSize="20dp"
                     android:textColor="#ffffff"
