--- a/app/src/main/res/drawable/main_appbar.xml
+++ b/app/src/main/res/drawable/main_appbar.xml
@@ -4,7 +4,6 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#00a3e4"/>
-            <corners android:radius="5dp"/>
         </shape>
     </item>
 
@@ -13,7 +12,15 @@
             <gradient android:angle="315"
                       android:startColor="#77ffffff"
                       android:centerColor="#00ffffff"/>
-            <corners android:radius="5dp"/>
+        </shape>
+    </item>
+
+
+    <item>
+        <shape android:shape="rectangle">
+            <gradient android:angle="90"
+                      android:startColor="#ffffffff"
+                      android:centerColor="#00ffffff"/>
         </shape>
     </item>
 
