--- a/app/src/main/res/layout/main_activity_star_list.xml
+++ b/app/src/main/res/layout/main_activity_star_list.xml
@@ -15,6 +15,7 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/main_appbar"
             app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
 
             <android.support.v7.widget.Toolbar
@@ -43,7 +44,6 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#aaaabf"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="jni.ndk.com.myapplication.ScrollingActivity">
 
