--- a/app/src/main/res/layout/main_window_info.xml
+++ b/app/src/main/res/layout/main_window_info.xml
@@ -16,7 +16,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="15dp"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -44,7 +44,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
                     android:lines="1"
-                    android:text="CAU CSE"
+                    android:text="CAU"
                     android:textSize="30dp"
                     android:textColor="#77ffffff"
                     android:textStyle="bold"/>
