--- a/app/src/main/res/drawable/button_round_blue.xml
+++ b/app/src/main/res/drawable/button_round_blue.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#ffcc99"/>
+            <solid android:color="#335599"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
@@ -11,9 +11,11 @@
     <item>
         <shape android:shape="rectangle">
             <gradient android:angle="315"
-                      android:startColor="#77ffffff"
+                      android:startColor="#44ffffff"
                       android:centerColor="#00ffffff"/>
-            <corners android:radius="5dp"/>
+            <corners android:radius="5dp"/>\
+            <stroke android:color="#5588ff"
+                    android:width="1dp"/>
         </shape>
     </item>
 
