--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -8,54 +8,15 @@
     android:layout_height="match_parent"
     tools:context="tong.cau.com.cautong.main.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
-        android:id="@+id/main_appbar"
-        android:layout_width="match_parent">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.v7.widget.Toolbar
-
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                app:contentInsetLeft="0dp">
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text=""
-                        android:textColor="#ffffff"
-                        android:textSize="20dp"/>
-
-                    <RelativeLayout
-                        android:id="@+id/test_button"
-                        android:background="@drawable/ham"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:text="Button" />
-                </RelativeLayout>
-
-            </android.support.v7.widget.Toolbar>
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/window_board_title_caucse"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
         <RelativeLayout
-            android:layout_marginTop="47dp"
+            android:layout_marginTop="77dp"
             android:layout_width="156dp"
             android:layout_height="156dp"
             android:layout_centerHorizontal="true">
@@ -63,13 +24,13 @@
             <LinearLayout
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:background="@drawable/c_light_blue"/>
+                android:background="@drawable/c_white"/>
 
             <LinearLayout
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignParentRight="true"
-                android:background="@drawable/c_light_blue"/>
+                android:background="@drawable/c_white"/>
 
 
             <LinearLayout
@@ -89,7 +50,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_centerInParent="true"
-                android:background="@drawable/c_white">
+                android:background="@drawable/c">
 
             </LinearLayout>
 
@@ -98,7 +59,7 @@
 
 
         <RelativeLayout
-            android:layout_marginTop="250dp"
+            android:layout_marginTop="280dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
             android:layout_width="match_parent"
@@ -107,9 +68,9 @@
 
             <EditText
                 android:id="@+id/edit_text_search"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="45dp"
                 android:layout_marginRight="15dp"
-                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
@@ -119,6 +80,33 @@
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textColor="#223377"/>
+
+            <View
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/icon_search"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/button_search"
+            android:layout_marginTop="350dp"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/button_round_blue">
+
+            <TextView
+                android:layout_centerInParent="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:inputType="text"
+                android:text="전체검색"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="#ffffff"/>
         </RelativeLayout>
 
 
