디자인 조금 더 변경

--- a/app/src/main/res/layout/main_window_site_list_dialog.xml
+++ b/app/src/main/res/layout/main_window_site_list_dialog.xml
@@ -29,16 +29,18 @@
                 <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="45dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="20dp">
+                    android:layout_marginBottom="45dp">
 
                     <LinearLayout
                         android:id="@+id/list_items"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+
+                        android:paddingBottom="20dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:paddingTop="20dp">
 
                     </LinearLayout>
                 </ScrollView>
@@ -50,11 +52,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:layout_alignParentBottom="true"
-                    android:background="#00ffffff">
+                    android:background="@drawable/window_board_big_round">
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="1dp"
+                        android:layout_height="2dp"
                         android:background="#5588ff">
 
                     </View>
