--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -102,8 +102,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
-                android:inputType="text"
-                android:text="전체검색"
+                android:text="전체보기"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textColor="#ffffff"/>
